--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "newme",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vriti-goyal.github.io/Weather-App",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
